# ephyra-specs

./: README.rst  setup.cfg
doc/source/: conf.py  index.rst
specs/newton/approved/: initial_design.rst
