[metadata]
name = ephyra-specs
summary = Design Specifications for Ephyra
description-file =
    README.rst
author = OpenStack
author-email = rcbau@lists.rcbops.com
home-page = http://github.com/rcbops/ephyra-specs
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
